@@ -1,3 +1,9 @@
+2006-11-06  Inge Wallin  <inge@lysator.liu.se>
+
+	Fix  bug 128758: misinterpretation of the checkbox "first row as label"
+	* kchart_part.cc (createLabelsAndLegend): Pass parameters as
+	references.
+
 2006-10-29  Inge Wallin  <inge@lysator.liu.se>
 
 	* Imported KDChart 1.1.4.
